fix house/bldg icon alignment issue

--- a/sass/modules/_addresslist.sass
+++ b/sass/modules/_addresslist.sass
@@ -16,8 +16,6 @@
 .action-complex
   @extend .actionbutton
   +icon('ui/house.png','ui/bldg.png')
-  +inline-block
-  vertical-align: baseline
   &.single
     +icon('ui/bldg.png','ui/house.png')
 .action-info
